--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.51.21",
+    "@tanstack/react-query-devtools": "^5.51.21",
+    "@tanstack/react-router": "^1.46.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -50,6 +53,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-query": "^3.39.3",
     "react-resizable-panels": "^2.0.22",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
@@ -60,6 +64,8 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.46.8",
+    "@tanstack/router-plugin": "^1.46.6",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
